--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "date-fns": "^2.11.1",
+    "fetch": "^1.1.0",
     "gray-matter": "^4.0.2",
     "next": "9.5.3",
     "node-sass": "^4.14.1",
