--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fetch": "^1.1.0",
     "gray-matter": "^4.0.2",
     "http-proxy-middleware": "^1.0.6",
+    "mongodb": "^3.6.2",
     "next": "9.5.3",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
