--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI='mongodb+srv://root:root@cluster0.1v3wg.gcp.mongodb.net?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://root:root@cluster0.1v3wg.gcp.mongodb.net?retryWrites=true&w=majority'
