--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
     "name": "my-mongodb-api",
     "version": 2,
     "env": {
-      "MONGODB_URI": "@my-mongodb-uri"
+      "MONGODB_URI": "mongodb+srv://root:root@cluster0.1v3wg.gcp.mongodb.net?retryWrites=true&w=majority"
     }
   }
