--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.7.1",
+    "babel-plugin-import": "^1.13.1",
     "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
@@ -18,6 +21,7 @@
     "mongodb": "^3.6.2",
     "next": "9.5.3",
     "node-sass": "^4.14.1",
+    "null-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
