--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.2",
     "http-proxy-middleware": "^1.0.6",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.9",
     "next": "9.5.3",
     "node-sass": "^4.14.1",
     "null-loader": "^4.0.1",
